[gd_scene load_steps=14 format=2]

[ext_resource path="res://Gunnkour/Levels/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Gunnkour/Killbox/ThaleahFat.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Gunnkour/mainmenubackground.jpg" type="Texture" id=3]

[sub_resource type="Shader" id=15]
code = "shader_type canvas_item;

void vertex()
{
	VERTEX.x += cos(TIME + VERTEX.x) * 1.5;
	VERTEX.y += sin(TIME + VERTEX.y) * 2.5;
	
}"

[sub_resource type="ShaderMaterial" id=16]
shader = SubResource( 15 )

[sub_resource type="Shader" id=4]
code = "shader_type canvas_item;

void vertex()
{
	VERTEX.x += cos(TIME + VERTEX.x) * 0.5;
	VERTEX.y += sin(TIME + VERTEX.y) * 1.5;
	
}"

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 4 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 2 )

[sub_resource type="Shader" id=11]
code = "shader_type canvas_item;

void vertex()
{
	VERTEX.x += cos(TIME + VERTEX.x) * 0.5;
	VERTEX.y += sin(TIME + VERTEX.y) * 1.5;
	
}"

[sub_resource type="ShaderMaterial" id=12]
shader = SubResource( 11 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 2 )

[sub_resource type="Shader" id=13]
code = "shader_type canvas_item;

void vertex()
{
	VERTEX.x += cos(TIME + VERTEX.x) * 0.5;
	VERTEX.y += sin(TIME + VERTEX.y) * 1.5;
	
}"

[sub_resource type="ShaderMaterial" id=14]
shader = SubResource( 13 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 16 )
position = Vector2( 946.817, 535.985 )
scale = Vector2( 1.68114, 1.68114 )
texture = ExtResource( 3 )

[node name="Label2" type="Label" parent="."]
material = SubResource( 5 )
margin_left = 96.6049
margin_top = 25.9318
margin_right = 160.605
margin_bottom = 58.9318
rect_scale = Vector2( 26.7518, 25.9618 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0.211765, 0.0666667, 1 )
text = "Gunnkour
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="."]
material = SubResource( 5 )
margin_left = 1362.21
margin_top = 992.275
margin_right = 1466.21
margin_bottom = 1025.27
rect_scale = Vector2( 5.15626, 5.004 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "made by jayden
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
material = SubResource( 5 )
margin_left = 96.6049
margin_top = 25.9318
margin_right = 160.605
margin_bottom = 58.9318
rect_scale = Vector2( 26.7518, 25.9618 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0.211765, 0.0666667, 1 )
text = "Gunnkour
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
material = SubResource( 5 )
margin_left = 84.0
margin_top = 12.0
margin_right = 148.0
margin_bottom = 45.0
rect_scale = Vector2( 26.7518, 25.9618 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.407843, 0.741176, 0, 1 )
text = "Gunnkour
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play2" type="Button" parent="."]
material = SubResource( 12 )
margin_left = 127.019
margin_top = 458.178
margin_right = 174.019
margin_bottom = 479.178
rect_scale = Vector2( 6.06068, 6.06068 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
action_mode = 0
text = "PLAY!"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="."]
material = SubResource( 12 )
margin_left = 121.923
margin_top = 452.618
margin_right = 168.923
margin_bottom = 473.618
rect_scale = Vector2( 6.06068, 6.06068 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
action_mode = 0
text = "PLAY!"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings2" type="Button" parent="."]
material = SubResource( 14 )
margin_left = 126.084
margin_top = 619.414
margin_right = 198.084
margin_bottom = 640.414
rect_scale = Vector2( 6.06068, 6.06068 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
action_mode = 0
text = "SETTINGS!"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Button" parent="."]
material = SubResource( 14 )
margin_left = 121.923
margin_top = 614.698
margin_right = 168.923
margin_bottom = 635.698
rect_scale = Vector2( 6.06068, 6.06068 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
action_mode = 0
text = "SETTINGS!"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit2" type="Button" parent="."]
material = SubResource( 14 )
margin_left = 124.647
margin_top = 780.524
margin_right = 171.647
margin_bottom = 801.524
rect_scale = Vector2( 6.06068, 6.06068 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
action_mode = 0
text = "EXIT!"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="."]
material = SubResource( 14 )
margin_left = 121.923
margin_top = 776.778
margin_right = 168.923
margin_bottom = 797.778
rect_scale = Vector2( 6.06068, 6.06068 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
action_mode = 0
text = "EXIT!"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Settings2" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Exit2" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
